--- a/lilMessServer/lilMessServer.csproj
+++ b/lilMessServer/lilMessServer.csproj
@@ -97,6 +97,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\lilMessMisc\lilMessMisc.csproj">
+      <Project>{ab07c439-3fe1-4740-a83f-aa82c187e172}</Project>
+      <Name>lilMessMisc</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
