--- a/lilMess.Server.Network/lilMess.Server.Network.csproj
+++ b/lilMess.Server.Network/lilMess.Server.Network.csproj
@@ -53,7 +53,10 @@
   <ItemGroup>
     <Compile Include="INetwork.cs" />
     <Compile Include="Impl\ServerNetwork.cs" />
+    <Compile Include="Models\StatisticsModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IMessageProcessor.cs" />
+    <Compile Include="Services\MessageProcessor.cs" />
     <Compile Include="Services\UserService.cs" />
     <Compile Include="Services\IUserService.cs" />
     <Compile Include="Services\IService.cs" />
