--- a/lilMess.Server/lilMess.Server.csproj
+++ b/lilMess.Server/lilMess.Server.csproj
@@ -53,9 +53,15 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Unity.3.5.1404.0\lib\net45\Microsoft.Practices.Unity.dll</HintPath>
     </Reference>
-    <Reference Include="MongoRepository.Net45, Version=1.6.7.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="MongoDB.Bson">
+      <HintPath>..\packages\mongocsharpdriver.1.10.0\lib\net35\MongoDB.Bson.dll</HintPath>
+    </Reference>
+    <Reference Include="MongoDB.Driver">
+      <HintPath>..\packages\mongocsharpdriver.1.10.0\lib\net35\MongoDB.Driver.dll</HintPath>
+    </Reference>
+    <Reference Include="MongoRepository.Net45, Version=1.6.8.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\MongoRepository.1.6.7.1\lib\net45\MongoRepository.Net45.dll</HintPath>
+      <HintPath>..\packages\MongoRepository.1.6.8\lib\net45\MongoRepository.Net45.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Xml" />
@@ -74,7 +80,9 @@
     </ApplicationDefinition>
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Models\StatisticsModel.cs" />
-    <Compile Include="ThreadSafeObservableCollection.cs" />
+    <Compile Include="Models\StatisticProviders\IncomingTrafficStatistics.cs" />
+    <Compile Include="Models\StatisticProviders\OutcomingTrafficStatistics.cs" />
+    <Compile Include="Models\StatisticProviders\StatisticsProvider.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
