--- a/lilMess.Tools/lilMess.Tools.csproj
+++ b/lilMess.Tools/lilMess.Tools.csproj
@@ -35,7 +35,7 @@
     <Reference Include="System.Management" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Guid.cs" />
+    <Compile Include="HardwareGuid.cs" />
     <Compile Include="AddressParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
