added "me" user property

--- a/lilMess.Server.Network/lilMess.Server.Network.csproj
+++ b/lilMess.Server.Network/lilMess.Server.Network.csproj
@@ -33,8 +33,12 @@
     <Reference Include="AutoMapper">
       <HintPath>..\packages\AutoMapper.3.3.1\lib\net40\AutoMapper.dll</HintPath>
     </Reference>
-    <Reference Include="Lidgren.Network">
-      <HintPath>..\lilMessServer\bin\Debug\Lidgren.Network.dll</HintPath>
+    <Reference Include="DynamicDataDisplay">
+      <HintPath>..\libraries\DynamicDataDisplay.dll</HintPath>
+    </Reference>
+    <Reference Include="Lidgren.Network, Version=2012.1.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\libraries\Lidgren.Network.dll</HintPath>
     </Reference>
     <Reference Include="MongoDB.Bson">
       <HintPath>..\packages\mongocsharpdriver.1.10.0\lib\net35\MongoDB.Bson.dll</HintPath>
