--- a/lilMess.Client.Network/lilMess.Client.Network.csproj
+++ b/lilMess.Client.Network/lilMess.Client.Network.csproj
@@ -32,7 +32,7 @@
   <ItemGroup>
     <Reference Include="Lidgren.Network, Version=2012.1.7.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lilMessServer\bin\Debug\Lidgren.Network.dll</HintPath>
+      <HintPath>..\libraries\Lidgren.Network.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
