--- a/lilMess.Client/App.config
+++ b/lilMess.Client/App.config
@@ -1,6 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 
 <configuration>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="lilMess.Client.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
@@ -13,4 +18,11 @@
     </assemblyBinding>
   </runtime>
 
+  <userSettings>
+    <lilMess.Client.Properties.Settings>
+      <setting name="DefaultLanguage" serializeAs="String">
+        <value>en-US</value>
+      </setting>
+    </lilMess.Client.Properties.Settings>
+  </userSettings>
 </configuration>
