--- a/lilMess.Client/packages.config
+++ b/lilMess.Client/packages.config
@@ -3,6 +3,7 @@
 <packages>
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="gong-wpf-dragdrop" version="0.1.4.3" targetFramework="net45" />
   <package id="MahApps.Metro" version="1.1.2.0" targetFramework="net45" />
   <package id="MahApps.Metro.Resources" version="0.4.0.0" targetFramework="net45" />
   <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net45" />
