--- a/lilMess.Misc/lilMess.Misc.csproj
+++ b/lilMess.Misc/lilMess.Misc.csproj
@@ -39,6 +39,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\MessageModel.cs" />
+    <Compile Include="Model\PermissionModel.cs" />
     <Compile Include="Model\RoleModel.cs" />
     <Compile Include="Model\RoomModel.cs" />
     <Compile Include="Model\UserModel.cs" />
