--- a/lilMess.Server.Network/lilMess.Server.Network.csproj
+++ b/lilMess.Server.Network/lilMess.Server.Network.csproj
@@ -56,13 +56,15 @@
     <Compile Include="Models\StatisticsModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\IMessageProcessor.cs" />
+    <Compile Include="Services\IRoomService.cs" />
     <Compile Include="Services\IStatisticsService.cs" />
-    <Compile Include="Services\MessageProcessor.cs" />
-    <Compile Include="Services\StatisticsService.cs" />
-    <Compile Include="Services\UserService.cs" />
+    <Compile Include="Services\Impl\MessageProcessor.cs" />
+    <Compile Include="Services\Impl\RoomService.cs" />
+    <Compile Include="Services\Impl\StatisticsService.cs" />
+    <Compile Include="Services\Impl\UserService.cs" />
     <Compile Include="Services\IUserService.cs" />
     <Compile Include="Services\IService.cs" />
-    <Compile Include="Services\Service.cs" />
+    <Compile Include="Services\Impl\Service.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\lilMess.DataAccess\lilMess.DataAccess.csproj">
