--- a/lilMess.Server/App.config
+++ b/lilMess.Server/App.config
@@ -4,7 +4,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
   </startup>
   <connectionStrings>
-    <add name="MongoServerSettings" connectionString="mongodb://localhost/lilMessDatabase" />
+    <add name="MongoServerSettings" connectionString="mongodb://188.120.229.209/lilMessDatabase" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
