--- a/lilMess.Tools/lilMess.Tools.csproj
+++ b/lilMess.Tools/lilMess.Tools.csproj
@@ -30,11 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GlobalKeyboardHook.cs" />
     <Compile Include="HardwareGuid.cs" />
     <Compile Include="AddressParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
