Added settings for application & small refactoring

--- a/lilMess.Client/App.config
+++ b/lilMess.Client/App.config
@@ -21,7 +21,13 @@
   <userSettings>
     <lilMess.Client.Properties.Settings>
       <setting name="DefaultLanguage" serializeAs="String">
-        <value>en-US</value>
+        <value>ru-RU</value>
+      </setting>
+      <setting name="DefaultAppTheme" serializeAs="String">
+        <value>BaseLight</value>
+      </setting>
+      <setting name="DefaultAppAccent" serializeAs="String">
+        <value>Green</value>
       </setting>
     </lilMess.Client.Properties.Settings>
   </userSettings>
